--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/iso-equidad.png" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100&display=swap');
     </style>
+    <link href="/src/fonts/big_noodle_titling.ttf" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Equidad Legal</title>
   </head>
   <body>
     <div id="root"></div>
