--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/iso-equidad.png" />
+    <link rel="icon" type="image/png" href="/iso-equidad.png" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100&display=swap');
     </style>
